// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product Contribution correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    <div>
      We will attempt to take payment
       of £0
      ,
       
      <div>
        on the first day of every month
      </div>
      , from now until you cancel your payment. Payments may take up to 6 days to be recorded in your bank account. You can change how much you give or cancel your payment at any time.
    </div>
  </div>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product DigitalSubscription correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  />
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product GuardianAdLite correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    <div>
      The 
      Guardian Ad-Lite
       subscription
       will auto-renew each
       
      month
      . You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
    </div>
  </div>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product OneTimeContribution correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  />
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product SupporterPlus correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    <div>
      The 
      All-access digital
       subscription and any contribution will auto-renew each
       
      month
      . You will be charged the subscription and contribution amounts using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
    </div>
  </div>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs render product TierThree correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    <div>
      The 
      Digital + print
       subscription
      s
       will auto-renew each
       
      month
      . You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
    </div>
  </div>
</div>
`;
